<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="15dp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_banners"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/llDots" />

        <LinearLayout
            android:id="@+id/llDots"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_above="@id/btn_login"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:layout_above="@id/btn_signUp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/greyPrimary"
            android:gravity="center"
            android:text="@string/login_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </RelativeLayout>


</layout>