<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="otpVerify"
            type="com.rjesture.presenters.OtpVerify" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="304dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="100dp"
                    android:fontFamily="@font/muli_extrabold"
                    android:text="@string/appsLoginWelcome"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/premium"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_header"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="24.0dip"
                    android:elevation="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile"
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        android:layout_centerHorizontal="true"
                        android:elevation="5dp"
                        android:src="@drawable/newlogo"
                        app:civ_border_color="@color/yellow"
                        app:civ_border_width="3.0dip" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50.0dip"
                        android:foreground="?android:selectableItemBackground"
                        app:cardBackgroundColor="#ffffffff"
                        app:cardCornerRadius="5.0dip"
                        app:cardElevation="0.0dip"
                        app:cardUseCompatPadding="false">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginTop="50.0dip"
                            android:orientation="vertical"
                            android:padding="24.0dip">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/muli_extrabold"
                                android:text="@string/verify_otp"
                                android:textAlignment="center"
                                android:textAllCaps="true"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                                android:textColor="@color/red"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_gravity="center_horizontal"/>


                            <TextView
                                android:id="@+id/tv_subHeader"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginVertical="20.0dip"
                                android:fontFamily="@font/muli_bold"
                                android:text="@string/enterTheOtpSendToYourMobileEmail"
                                android:textColor="@color/darkBlue"
                                android:textSize="15.0sp"
                                android:textStyle="bold"
                                android:visibility="visible" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:contentDescription="@string/app_name"
                                    android:src="@drawable/ic_user"
                                    app:tint="@color/gray" />

                                <View
                                    android:layout_width="0.4dp"
                                    android:layout_height="25dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginStart="5dp"
                                    android:layout_marginEnd="5dp"
                                    android:background="@drawable/login_line" />

                                <EditText
                                    android:id="@+id/et_otp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:background="@drawable/edittext_background"
                                    android:hint="@string/otp"
                                    android:inputType="number"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:textColor="@color/black"
                                    android:textColorHint="@color/gray" />

                            </LinearLayout>

                            <include layout="@layout/row_cross_line" />

                            <RelativeLayout
                                android:id="@+id/rl_timer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/tv_otpTimer"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:gravity="center"
                                    android:text=""
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_resendCode"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="20dp"
                                    android:gravity="center"
                                    android:textSize="14sp"
                                    android:visibility="gone"
                                    android:onClick="@{(v)->otpVerify.reSendOtp()}"/>
                            </RelativeLayout>


                            <Button
                                android:layout_width="130dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="20dp"
                                android:background="@drawable/white_login_square"
                                android:onClick="@{(v)->otpVerify.verifyOtp()}"
                                android:text="@string/verify_otp"
                                android:textAllCaps="false"
                                android:textColor="@color/login_text"
                                android:textSize="16sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </RelativeLayout>



            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
</layout>